# iMixing

./: .dockerignore  .env.beget.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.beget.yml  index.html  pyproject.toml  render.yaml
docs/: AGENT_SPEC.md  DEPLOY_BEGET.md  DEPLOY_RENDER.md  MARKETING_PLAYBOOK_2026-05-30.md  MIDI_GENERATOR.md  PRODUCTION_READINESS.md  PROJECT_PRESENTATION_RU.md  SERVICE_DESCRIPTION.md  V2_AUDIO_QUALITY.md  iMixing_full_launch_plan.docx
docs/demo/: index.html
examples/stems/: README.md
migrations/: 001_initial.sql
scripts/: edit_midi_music_rules.py
src/imixing_agent/: __init__.py  audio_analysis.py  audio_jobs.py  auth.py  cli.py  loudness.py  midi_cli.py  midi_fixer.py  midi_generator.py  midi_telegram_bot.py  midi_web.py  mix_strategy.py  models.py  persistence.py  quality.py  queueing.py  rendering.py  reporting.py  settings.py  stem_classifier.py  storage.py  telemetry.py  worker.py
tests/: test_iteration1.py
